--- a/templates/dashboards/admin/events.html
+++ b/templates/dashboards/admin/events.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
+    <link rel="icon" href="{{ url_for('static', filename='logo.ico') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet">
@@ -625,7 +626,7 @@
             <li><a href="/admin/users" class="sidebar-link"><i class="bi bi-people"></i> <span>Users</span></a></li>
             <li><a href="/admin/customers" class="sidebar-link"><i class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
             <li><a href="/admin/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a></li>
-            <li><a href="/manager/transport" class="sidebar-link"><i class="bi bi-truck"></i><span>Transport</span></a></li>
+            <li><a href="/admin/transport" class="sidebar-link"><i class="bi bi-truck"></i><span>Transport</span></a></li>
             <li><a href="/admin/events" class="sidebar-link active"><i class="bi-megaphone"></i> <span>Events</span></a></li>
             <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
         </ul>
